--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hw3 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(hw3 main.c message_slot.c message_slot.h)
+add_executable(hw3 main.c message_slot.c message_slot.h message_reader.c message_reader.h message_sender.c message_sender.h)
